src/test/resources/plang-strict/parse-error/019_declared_function_not_defined.plang
**#Declared function not defined (even if not used)
**FirstErrorLoc:3,11
majd_lesz függvény f(x: Egész): Egész

program t
  ki: ">_>"
program_vége
